@@ -15,6 +15,7 @@ Bugs fixed:
 - 1677195 Fixed crash in provider manager trace
 - 1682045 Fixed compile error with gcc 4.1.3
 - 1682388 Relaxed CMPIValue * alignment pickyness of sfcb
+- 1686170 Fixed instance comparision in queries do not work as expected
 
 Changes in 1.2.1
 ================
